# arc-agi-3-agent

./: .gitignore  CLAUDE.md  README.md  baseline-realistic.md  death-model.md  diagnostic-bc-generalization.md  diagnostic_bc_generalization_raw.json  goal-inferability-diagnostic.md  phase-0c-spec.md  phase-1-bootstrap.md  phase-2-results.md  phase-2.5-log.md  phase-2.5-results.md  phase-3-results.md  phase-3-v1-results.md  phase-3-v2-results.md  phase-3-v3-results.md  pyproject.toml  research-findings.md  scenario-taxonomy.md  submission-tiebreaker.md  validation-results.md
notebooks/: kernel-metadata.json  s1_submission.ipynb  s1_submission.py
scripts/: click_tolerance_check.py  death_probe.py  diagnostic_bc_generalization.py  multiseed_eval.py  p3_substrate_probe.py  phase_2_5_sweep.py  probe_vram.py  render_blind_frames.py
scripts/data_prep/: build_split_cache.py  composition_report.py  replay_parser_v3.py
scripts/submit/: py_to_ipynb.py
scripts/validation/: engine_stress_test.py  env_source_audit.py  replay_integrity.py  replay_parser.py  replay_parser_v2.py  smoke_offline.py  toy_bc_smoke.py  visibility_audit.py
src/arc_agi_3_agent/: seeding.py
src/arc_agi_3_agent/agent/: __init__.py  elite_v0.py
src/arc_agi_3_agent/agents/: random_agent.py
tests/: test_perception_input.py  test_scoring.py
tests/discovery/: test_goal_probe.py  test_harness_death_reset.py  test_harness_dispatch.py  test_life_model.py  test_persistence.py  test_saliency.py  test_substrate.py  test_unified_goal.py
tests/training/: test_holdout_isolation.py  test_overfit.py
(+40 files in other folders)
