[project]
name = "arc-agi-3-agent"
version = "0.1.0"
description = "ARC Prize 2026 — ARC-AGI-3 Kaggle competition agent"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "CC-BY-4.0" }
authors = [{ name = "Adarsh Reddy", email = "adarshreddybms@gmail.com" }]

dependencies = [
    "arc-agi==0.9.8",
    "arcengine==0.9.3",
    "numpy==2.4.4",
    "pydantic==2.13.2",
    "pillow==12.2.0",
    "matplotlib==3.10.8",
    "torch==2.12.0",
    "python-dotenv>=1.2.2",
    "flask==3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_agi_3_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
